# ICE_Pocha

./: Cargo.toml  README.md
api/: Cargo.toml
api/src/: lib.rs  models.rs
api/src/handlers/: admin_handler.rs  menu_handler.rs  mod.rs  order_handler.rs
api/src/models/: admin_models.rs  menu_models.rs  mod.rs  order_models.rs
api/src/routes/: admin_route.rs  menu_route.rs  mod.rs  order_route.rs
api/src/utils/: constants.rs  error_api.rs  mod.rs
entity/: Cargo.toml
entity/src/: date_margin.rs  inmarket_menu.rs  lib.rs  menu.rs  order.rs  order_detail.rs  orders_detail.rs  packaged_menu.rs  prelude.rs
migration/: Cargo.toml
migration/src/: lib.rs  m_20230917_000001_create_menu_table.rs  m_20230917_000002_create_order_table.rs  m_20230917_000003_create_orders_detail_table.rs  m_20230921_000001_create_packaged_menu.rs  m_20230921_000002_create_inmarket_menu.rs  m_20230921_000003_create_order.rs  m_20230921_000004_create_orders_detail.rs  m_20230921_000005_create_date_margin.rs
service/: Cargo.toml
service/src/: lib.rs
src/: main.rs
src/entities/: menu.rs  mod.rs  orders_detail.rs
src/migrator/: m_20230917_000002_create_order_table.rs
