[package]
name = "icepocha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "*", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }
futures = "0.3.21"
dotenv = "0.15.0"

[dependencies.sea-orm-migration]
version = "*"
features = ["sqlx-mysql", "runtime-async-std-native-tls"]
