[package]
name = "icepocha-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icepocha-service = { path = "../service" }
tokio = { version = "1.29.0", features = ["full"] }
axum = "0.6.19"
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["fs"] }
tower-cookies = "0.9.0"
anyhow = "1.0.71"
dotenvy = "0.15.7"
serde = "1.0.175"
serde_json = "1.0.102"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
entity = { path = "../entity" }
migration = { path = "../migration" }
chron = "0.1.2"
chrono = "0.4.31"

[dependencies.sea-orm]
version = "0.12.2" # sea-orm version
features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-mysql",
]
