[package]
name = "icepocha-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.0", features = ["full"] }
axum = { version = "0.6.19", features = ["ws"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs", "cors"] }
tower-cookies = "0.9.0"
anyhow = "1.0.71"
dotenvy = "0.15.7"
serde = "1.0.175"
serde_json = "1.0.102"
futures = "0.3"
tokio-stream = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
entity = { path = "../entity" }
migration = { path = "../migration" }
chrono = "0.4.31"
uuid = { version = "1.4.1", features = ["v4"] }
lazy_static = "1.4.0"
sea-orm-migration = "0.12.3"
axum-sessions = "0.5.0"
rand = "0.8.5"
axum-login = "0.6.0"
once_cell = "1.18.0"
tokio-tungstenite = "0.20.1"
tungstenite = "0.20.1"
url = "2.4.1"

[dev-dependencies.rand]
version = "0.8.5"
features = ["min_const_gen"]

[dependencies.sea-orm]
version = "0.12.2" # sea-orm version
features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-mysql",
]
